fix wrong content

--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -66,7 +66,7 @@ APIs for setting up the SDK have been taken over by the new classes `CaptureVisi
 | `Dynamsoft.DBR.BarcodeReader.isWasmLoaded()`  or <br>`Dynamsoft.DBR.BarcodeScanner.isWasmLoaded()`             | [`Dynamsoft.CVR.CaptureVisionRouter.isModuleLoaded('dbr')`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#ismoduleloaded)                                                                                                                                                                                                                                         |
 | `Dynamsoft.DBR.BarcodeReader.version`        or <br>`Dynamsoft.DBR.BarcodeScanner.version`                     | [`Dynamsoft.DBR.BarcodeReaderModule.getVersion()`](https://officecn.dynamsoft.com:808/barcode-reader/docs/web/programming/javascript/api-reference/barcode-reader-module.html#getversion)                                                                                                                                                                                                                                                                                           |
 | `Dynamsoft.DBR.BarcodeReader.detectEnvironment()`    or <br>`Dynamsoft.DBR.BarcodeScanner.detectEnvironment()` | [`Dynamsoft.CVR.CaptureVisionRouter.detectEnvironment()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#detectenvironment)                                                                                                                                                                                                                                        |
-| `Dynamsoft.DBR.BarcodeReader.onWarning`      or <br>`Dynamsoft.DBR.BarcodeScanner.onWarning`                   | [`Dynamsoft.CVR.CaptureVisionRouter.onWarning`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#onwarning) and <br>[`Dynamsoft.DCE.CameraEnhancer.onWarning`] (https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/instantiate.html#onwarning)                                                                                  |
+| `Dynamsoft.DBR.BarcodeReader.onWarning`      or <br>`Dynamsoft.DBR.BarcodeScanner.onWarning`                   | [`Dynamsoft.CVR.CaptureVisionRouter.onWarning`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#onwarning) and <br>[`Dynamsoft.DCE.CameraEnhancer.onWarning`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/instantiate.html#onwarning)                                                                                   |
 | `Dynamsoft.DBR.BarcodeReader.createInstance()`or <br>`Dynamsoft.DBR.BarcodeScanner.createInstance()`           | [`Dynamsoft.CVR.CaptureVisionRouter.createInstance`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#createinstance)                                                                                                                                                                                                                                                |
 
 | API in v9.x                                                         | API in v10.x                                                                                                                                                                                  |
@@ -85,14 +85,14 @@ APIs for setting up the SDK have been taken over by the new classes `CaptureVisi
 
 ### Multiple-Image processing
 
-| API in v9.x                                         | API in v10.x                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| --------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `reader.setImageSource()`                           | [`router.setInput()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#setinput)                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| `reader.onImageRead` or <br>`scanner.onFrameRead`   | `let resultReceiver = new [Dynamsoft.CVR.CapturedResultReceiver()](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/core/basic-structures/captured-result-receiver.html);`<br>`resultReceiver.onDecodedBarcodesReceived = result => { };`<br>`router.addResultReceiver(resultReceiver)`                                                                                                                                                                                                                                                                                                                                  |
-| `reader.onUniqueRead` or <br>`scanner.onUniqueRead` | `let filter = new [MultiFrameResultCrossFilter()](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/utility/multi-frame-result-cross-filter.html);`<br>`filter.enableResultDeduplication(EnumCapturedResultItemType.CRIT_BARCODE, true);`<br>`router.addResultFilter(filter);`<br>`let resultReceiver = new [Dynamsoft.CVR.CapturedResultReceiver()](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/core/basic-structures/captured-result-receiver.html);`<br>`resultReceiver.onDecodedBarcodesReceived = result => { };`<br>`router.addResultReceiver(resultReceiver);` |
-| `reader.startScanning()` or <br>`scanner.show()`    | `let view = await Dynamsoft.DCE.CameraView.createInstance();`<br>`cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance(view);`<br>`cameraViewContainer.append(view.getUIElement());`<br>`router.setInput(cameraEnhancer);`<br>`cameraEnhancer.open();`<br>`router.startCapturing("SPECIFY-A-TEMPLATE")`                                                                                                                                                                                                                                                                                                                                                   |
-| `reader.stopScanning()` or <br>`scanner.hide()`     | [`router.stopCapturing()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#stopcapturing)<br>`cameraEnhancer.close();`<br>`cameraViewContainer.style.display = "none"`                                                                                                                                                                                                                                                                                                                                                                     |
-| `reader.resumeScanning()`                           | [`router.startCautring('SPECIFY-A-TEMPLATE')`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing)                                                                                                                                                                                                                                                                                                                                                                                                                             |
+| API in v9.x                                         | API in v10.x                                                                                                                                                                                                                                                                                                                                                     |
+| --------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `reader.setImageSource()`                           | [`router.setInput()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#setinput)                                                                                                                                                     |
+| `reader.onImageRead` or <br>`scanner.onFrameRead`   | `let resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onDecodedBarcodesReceived = result => { };`<br>`router.addResultReceiver(resultReceiver)`                                                                                                                                                                                  |
+| `reader.onUniqueRead` or <br>`scanner.onUniqueRead` | `let filter = new MultiFrameResultCrossFilter();`<br>`filter.enableResultDeduplication(EnumCapturedResultItemType.CRIT_BARCODE, true);`<br>`router.addResultFilter(filter);`<br>`let resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onDecodedBarcodesReceived = result => { };`<br>`router.addResultReceiver(resultReceiver);` |
+| `reader.startScanning()` or <br>`scanner.show()`    | `let view = await Dynamsoft.DCE.CameraView.createInstance();`<br>`cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance(view);`<br>`cameraViewContainer.append(view.getUIElement());`<br>`router.setInput(cameraEnhancer);`<br>`cameraEnhancer.open();`<br>`router.startCapturing("SPECIFY-A-TEMPLATE")`                                            |
+| `reader.stopScanning()` or <br>`scanner.hide()`     | [`router.stopCapturing()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#stopcapturing)<br>`cameraEnhancer.close();`<br>`cameraViewContainer.style.display = "none"`                                                              |
+| `reader.resumeScanning()`                           | [`router.startCautring('SPECIFY-A-TEMPLATE')`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing)                                                                                                                      |
 
 ### Process Settings
 
@@ -103,7 +103,7 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 | `reader.getScanSettings()` or <br>`scanner.getScanSettings()`       | No equivalent.                                                                                                                                                                                                                                                                                                           |
 | `reader.updateScanSettings()` or <br>`scanner.updateScanSettings()` | No equivalent.                                                                                                                                                                                                                                                                                                           |
 | `ScanSettings.intervalTime`                                         | [`SimplifiedCaptureVisionSettings.minImageCaptureInterval`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html?product=dbr&repoType=web#minimagecaptureinterval)                                   |
-| `ScanSettings.duplicateForgetTime`                                  | `let filter = new [MultiFrameResultCrossFilter()](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/utility/multi-frame-result-cross-filter.html);`<br>`filter.setDuplicateForgetTime();`<br>`router.addResultFilter(filter)`                                              |
+| `ScanSettings.duplicateForgetTime`                                  | `let filter = new MultiFrameResultCrossFilter();`<br>`filter.setDuplicateForgetTime();`<br>`router.addResultFilter(filter)`                                                                                                                                                                                              |
 | `ScanSettings.whenToPlaySoundforSuccessfulRead`                     | No equivalent. Use [`Dynamsoft.DCE.Feedback.beep()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/feedback.html#beep) when appropriate.                                                                                                                                       |
 | `ScanSettings.soundOnSuccessfullRead`                               | [`Dynamsoft.DCE.Feedback.beepSoundSource`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/feedback.html#beepsoundsource)                                                                                                                                                        |
 | `ScanSettings.whenToVibrateforSuccessfulRead`                       | No equivalent. Use [`Dynamsoft.DCE.Feedback.vibrate()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/feedback.html#vibrate) when appropriate.                                                                                                                                 |
@@ -131,8 +131,8 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 | `scanner.getUIElement()`                                                                                                                         | [`cameraView.getUIElement()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#getuielement)                                        |
 | `scanner.setUIElement()`                                                                                                                         | [`cameraView.setUIElement()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#setuielement)                                        |
 | `Dynamsoft.DBR.BarcodeScanner.defaultUIElementURL="THE-URL-TO-THE-HTML"`                                                                         | [`Dynamsoft.DCE.CameraView.createInstance("THE-URL-TO-THE-HTML")`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#createinstance) |
-| `scanner.barcodeFillStyle` <br>`scanner.barcodeStrokeStyle` <br>`scanner.barcodeLineWidth`                                                       | Change the preset style STYLE_GREEN_STROKE (ID = 2).                                                                                                                                       |
-| `scanner.barcodeFillStyleBeforeVerification` <br>`scanner.barcodeStrokeStyleBeforeVerification` <br>`scanner.barcodeLineWidthBeforeVerification` | Change the preset style STYLE_GREEN_STROKE_TRANSPARENT (ID = 10).                                                                                                                          |
+| `scanner.barcodeFillStyle` <br>`scanner.barcodeStrokeStyle` <br>`scanner.barcodeLineWidth`                                                       | Change the preset style `STYLE_GREEN_STROKE` (ID = 2).                                                                                                                                     |
+| `scanner.barcodeFillStyleBeforeVerification` <br>`scanner.barcodeStrokeStyleBeforeVerification` <br>`scanner.barcodeLineWidthBeforeVerification` | Change the preset style `STYLE_GREEN_STROKE_TRANSPARENT` (ID = 10).                                                                                                                        |
 | `scanner.regionMaskFillStyle` <br>`scanner.regionMaskStrokeStyle` <br>`scanner.regionMaskLineWidth`                                              | [`cameraView.setScanRegionMaskStyle()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#setscanregionmaskstyle)                    |
 | `scanner.setVideoFit()`                                                                                                                          | [`cameraView.setVideoFit()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#setvideofit)                                          |
 | `scanner.getVideoFit()`                                                                                                                          | [`cameraView.getVideoFit()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#getvideofit)                                          |
@@ -158,7 +158,7 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 | `scanner.updateVideoSettings()`                   | `cameraEnhancer.updateVideoSettings(https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#updatevideosettings)`                                                                                                                                                                                                                       |
 | `Dynamsoft.DBR.Barcodescanner.testCameraAccess()` | [`Dynamsoft.DCE.CameraEnhancer.testCameraAccess()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#testcameraaccess)                                                                                                                                                                                                           |
 | `scanner.play()`                                  | [`cameraEnhancer.open()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#open) or <br>[`cameraEnhancer.resume()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#resume) if paused.                                                                               |
-| `scanner.onPlayed`                                | [`cameraEnhancer.on("played", fn)](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/auxiliary.html#on)`                                                                                                                                                                                                                                              |
+| `scanner.onPlayed`                                | [`cameraEnhancer.on("played", fn)`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/auxiliary.html#on)                                                                                                                                                                                                                                              |
 | `scanner.pauseScan()`                             | [`router.stopCapturing()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#stopcapturing) while camera is still playing.                                                                                                                                       |
 | `scanner.resumeScan()`                            | [`router.startCautring('SPECIFY-A-TEMPLATE')`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing) when camera is already playing.                                                                                                                 |
 | `scanner.pause()`                                 | [`cameraEnhancer.pause()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#pause)                                                                                                                                                                                                                                               |
@@ -190,9 +190,9 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 | -------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | `scanner.convertToPageCoordinates()`                                             | [`cameraEnhancer.convertToPageCoordinates()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/ui.html#converttopagecoordinates)                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
 | `scanner.convertToClientCoordinates()`                                           | [`cameraEnhancer.convertToClientCoordinates()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/ui.html#converttoclientcoordinates)                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
-| `scanner.showTip()`                                                              | [`cameraEnhancer.setTipConfig()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#settipconfig) <br>[`cameraEnhancer.setTipVisible(true)](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#settipvisible)`                                                                                                                                                                                                                                                                                                      |
+| `scanner.showTip()`                                                              | [`cameraEnhancer.setTipConfig()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#settipconfig) <br>[`cameraEnhancer.setTipVisible(true)`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#settipvisible)                                                                                                                                                                                                                                                                                                      |
 | `scanner.hideTip()`                                                              | [`cameraEnhancer.setTipVisible(false)`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#settipvisible)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
 | `scanner.onTipSuggested()`                                                       | No equivalent.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
 | `scanner.updateTipMessage()`                                                     | [`cameraView.updateTipMessage()`] (https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#updatetipmessage)                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
 | `reader.getModeArgument()`<br>`reader.setModeArgument()`                         | No equivalent.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| `scanner.ifSaveOriginalImageInACanvas` <br>`scanner.getOriginalImageInACanvas()` | `settings = router.getSimplifiedSettings('SPECIFY-A-TEMPLATE');`<br>`settings.capturedResultItemTypes += Dynamsoft.Core.EnumCapturedResultItemType.CRIT_ORIGINAL_IMAGE;`<br>`await router.updateSettings("detect-document-boundaries", settings);`<br>`const resultReceiver = new [Dynamsoft.CVR.CapturedResultReceiver()](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/core/basic-structures/captured-result-receiver.html);`<br>`resultReceiver.onOriginalImageResultReceived = result => { // GET-THE-ORIGINAL-IMAGE //};`<br>`router.addResultReceiver(resultReceiver)` |
+| `scanner.ifSaveOriginalImageInACanvas` <br>`scanner.getOriginalImageInACanvas()` | `settings = router.getSimplifiedSettings('SPECIFY-A-TEMPLATE');`<br>`settings.capturedResultItemTypes += Dynamsoft.Core.EnumCapturedResultItemType.CRIT_ORIGINAL_IMAGE;`<br>`await router.updateSettings("detect-document-boundaries", settings);`<br>`const resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onOriginalImageResultReceived = result => { // GET-THE-ORIGINAL-IMAGE //};`<br>`router.addResultReceiver(resultReceiver)` |
